# differential-ml-eval

./: .gitignore  .gitmodules  .python-version  README.md  create_graphic.py  example_problem.py  pyproject.toml  requirements.txt  train_and_eval.py  tune_dml.py
experiments/: evaluate_experiment_results.py  evaluate_performance_trigonometric.py  evaluate_results.py  function_generator.py  functions.py  paper_examples.py  tune_dml_higher_dimensions.py  tune_dml_higher_dimensions_trigonometric.py  tune_dml_small_training_set.py  tune_dml_small_training_set_more_options-vanilla.py  tune_dml_small_training_set_more_options.py
experiments/results/trigonometric-100dim-1024data/: best_params_systematic-trigonometric-data=1024-dimensions=100-dml.json  best_params_systematic-trigonometric-data=1024-dimensions=100-vanilla.json  losses_dml.json  losses_vanilla.json
experiments/results/trigonometric-100dim-512data/: best_params_systematic-trigonometric-data=512-dimensions=100-dml.json  best_params_systematic-trigonometric-data=512-dimensions=100-vanilla.json  losses_dml.json  losses_vanilla.json
experiments/results/trigonometric-10dim-1024data/: best_params_systematic-trigonometric-data=1024-dimensions=10-vanilla.json  losses_systematic-trigonometric-data=1024-dimensions=10-dml.json  losses_vanilla.json
functions/: function_classes.py  function_generator.py
tests/functions/: test_dml_paper_examples.py  test_function_classes.py  test_function_generator.py  test_paper_examples.py
train_error_files/: train_error_dml.csv
(+62 files in other folders)
