[tool.poetry]
name = "differential-ml-eval"
version = "0.1.0"
description = "Dependency manager for the differential-ml-eval repo."
authors = ["Michael Fuest <ge69fuh@mytum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.14"
jaxlib = "^0.4.14"
optuna = "^3.3.0"
black = "^23.9.1"
seaborn = "^0.12.2"
optuna-dashboard = "^0.12.0"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
